# wickra-darwin

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: bench.yml  ci.yml  release.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_darwin.h
bindings/c/src/: lib.rs
bindings/csharp/WickraDarwin/: Darwin.cs  DllResolver.cs  Native.cs  README.md  WickraDarwin.csproj
bindings/csharp/WickraDarwin.Tests/: DarwinTests.cs  GoldenTests.cs  WickraDarwin.Tests.csproj
bindings/go/: README.md  darwin_test.go  go.mod  golden_test.go  wickra.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/darwin/: Darwin.java  Native.java
bindings/java/src/test/java/org/wickra/darwin/: DarwinTest.java  GoldenTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  darwin.test.js  golden.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_darwin/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: darwin.R
bindings/r/src/: Makevars  Makevars.win  wickra_darwin.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: golden.test.js
crates/darwin-bench/: Cargo.toml
crates/darwin-bench/benches/: darwin.rs
crates/darwin-bench/src/: lib.rs
crates/darwin-cli/: Cargo.toml
crates/darwin-cli/src/: args.rs  main.rs  run.rs
crates/darwin-core/: Cargo.toml
crates/darwin-core/src/: config.rs  darwin.rs  error.rs  evolve.rs  fitness.rs  genome.rs  lib.rs  rng.rs  search_space.rs  spec.rs
crates/darwin-core/tests/: conformance.rs  determinism_eq.rs  golden.rs  proptest_invariants.proptest-regressions  proptest_invariants.rs
docs/: ARCHITECTURE.md  Cookbook.md  DETERMINISM.md  EVOLUTION.md  FITNESS.md  GENOME.md
examples/: README.md
examples/c/: CMakeLists.txt  evolve.c  evolve.cpp
examples/csharp/Evolve/: Evolve.csproj  Program.cs
examples/data/candles/: sine.csv
examples/data/specs/: evolve.json
examples/go/: evolve.go  go.mod
examples/java/: pom.xml
examples/java/src/main/java/org/wickra/darwin/examples/: Evolve.java
examples/node/: evolve.js  package.json
examples/python/: evolve.py
examples/r/: evolve.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: crossover_mutate.rs  evolve_run.rs  sample_spec.rs  spec_parse.rs
golden/: README.md
golden/data/: sym-01.csv  sym-02.csv  sym-03.csv  sym-04.csv  sym-05.csv  sym-06.csv
golden/expected/: evolve_calmar.json  evolve_small.json
golden/specs/: evolve_calmar.json  evolve_conjunction.json  evolve_crossover.json  evolve_pnl.json  evolve_small.json
