[workspace]
resolver = "2"
members = [
    "crates/darwin-core",
    "crates/darwin-cli",
    "crates/darwin-bench",
    "bindings/python",
    "bindings/node",
    "bindings/wasm",
    "bindings/c",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wickra-lib/wickra-darwin"
authors = ["wickra-lib"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rayon = "1"
clap = { version = "4", features = ["derive"] }
wickra-core = "0.9"
# The compute engine DARWIN calls millions of times. Git dependency (the engine
# is not yet on crates.io) carries a version pin so cargo-deny's wildcard ban
# does not fire.
wickra-backtest = { git = "https://github.com/wickra-lib/wickra-backtest", version = "0.1" }
cbindgen = "0.27"
criterion = "0.5"
proptest = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
