[package]
name = "darwin-bench"
description = "Criterion benchmarks for the Wickra Darwin evolutionary search: evolve throughput by population, generations and symbol count, on the parallel and single-threaded engines."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# Default features off; the `parallel` feature below re-enables rayon so the
# default bench measures the parallel path and `--no-default-features` measures
# the single-threaded (WASM) path.
darwin-core = { path = "../darwin-core", version = "0.1", default-features = false }

[dev-dependencies]
criterion = { workspace = true }
wickra-backtest = { workspace = true }

[features]
default = ["parallel"]
parallel = ["darwin-core/parallel"]

[[bench]]
name = "darwin"
harness = false
