[package]
name = "darwin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Evolutionary strategy search over Wickra strategy specs."

[features]
default = ["parallel"]
parallel = ["dep:rayon"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = "1.1"
wickra-backtest = { workspace = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
